@@ -1,0 +1,59 @@
+/*
+ * This file is part of ROOSSTER.
+ * Copyright 2004, Benjamin Reitzammer <benjamin@roosster.org>
+ * All rights reserved.
+ *
+ * ROOSSTER is free software; you can redistribute it and/or modify
+ * it under the terms of the Artistic License.
+ *
+ * You should have received a copy of the Artistic License
+ * along with ROOSSTER; if not, go to
+ * http://www.opensource.org/licenses/artistic-license.php for details
+ *
+ * THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDER AND
+ * CONTRIBUTORS "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES,
+ * INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF
+ * AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO
+ * EVENT SHALL THE COPYRIGHT OWNER OR CONTRIBUTORS BE LIABLE
+ * FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR
+ * CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO,
+ * PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
+ * DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED
+ * AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT,
+ * STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE)
+ * ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF
+ * ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
+ */
+package org.roosster.util;
+
+import java.io.IOException;
+import org.apache.velocity.context.Context;
+
+import org.roosster.Constants;
+import org.roosster.Registry;
+import org.roosster.store.EntryStore;
+
+/**
+ * 
+ * @author <a href="mailto:benjamin@roosster.org">Benjamin Reitzammer</a>
+ */
+public class VelocityUtil 
+{
+    
+    /**
+     * 
+     */
+    public static void initContext(Registry registry, Context context) 
+    {
+        if ( registry == null || context == null )
+            throw new IllegalStateException("Registry and Context are not allowed to be null!");
+        
+        context.put(Constants.VELCTX_APPVERSION, registry.getConfiguration().getProperty(Constants.PROP_APPVERSION));
+        try {
+            EntryStore store = (EntryStore) registry.getPlugin("store");
+            context.put(Constants.VELCTX_INDEXNUM,   String.valueOf(store.getDocNum()) );
+        } catch (IOException ex) {
+            context.put(Constants.VELCTX_INDEXNUM,   "no docs there yet");
+        }
+    }  
+}
