@@ -4,14 +4,15 @@ output.encoding=UTF-8
 directive.foreach.counter.name=COUNT
 directive.foreach.counter.initial.value=0
 
-resource.loader=file
+resource.loader=file, class
 
 file.resource.loader.class=org.apache.velocity.runtime.resource.loader.FileResourceLoader
-# this one gets set in the code, to $HOME/templates
 file.resource.loader.path=./src/html
 file.resource.loader.cache=true
 file.resource.loader.modificationCheckInterval=2
 
+class.resource.loader.description = Velocity Classpath Resource Loader
+class.resource.loader.class = org.apache.velocity.runtime.resource.loader.ClasspathResourceLoader
 
 #runtime.log=velocity.log
 runtime.log.logsystem.class=org.roosster.logging.VelocityLogSystem
@@ -21,6 +22,7 @@ runtime.log.info.stacktrace=false
 
 # turn this on for debugging
 runtime.log.invalid.references=false
+velocimacro.permissions.allowInline=true
 
 # turn this off in production
 velocimacro.library.autoreload=true
