@@ -2,21 +2,22 @@
 
 <!DOCTYPE web-app PUBLIC "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN" "http://java.sun.com/dtd/web-app_2_3.dtd">
 <web-app>
-    <!--
     <servlet>
         <servlet-name>roosster</servlet-name>
         <servlet-class>org.roosster.mappers.ServletMapper</servlet-class>
+    <!--
+        <init-param> >
            <param-name>roosster.properties</param-name>
            <param-value>/WEB-INF/roosster.properties</param-value>
         </init-param> >
+    -->
         <load-on-startup>1</load-on-startup> 
     </servlet>    
-    -->
 
     <servlet>
         <servlet-name>api</servlet-name>
         <servlet-class>org.roosster.mappers.ApiServletMapper</servlet-class>
-        <load-on-startup>1</load-on-startup>
+        <load-on-startup>10</load-on-startup>
     </servlet>
     
     <servlet>
@@ -29,13 +30,11 @@
       <load-on-startup>100</load-on-startup>
     </servlet>
     
-    <!--
     <servlet-mapping>
         <servlet-name>roosster</servlet-name>
         <url-pattern>/application/*</url-pattern>
     </servlet-mapping>
-    -->
-   
+    
     <servlet-mapping>
         <servlet-name>api</servlet-name>
         <url-pattern>/api/*</url-pattern>
