@@ -1,2 +1,5 @@
 output.mode=roossterxml
 
+output.html.class=org.roosster.output.modes.HtmlMode
+output.html.ctype=text/html
+
